--- a/Class/TodoBox/TodoBox/Base.lproj/Main.storyboard
+++ b/Class/TodoBox/TodoBox/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jsF-PB-snT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jsF-PB-snT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,12 +24,28 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="taskCell" id="QuD-Tn-H5U">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TaskCell" textLabel="Twv-8D-INw" detailTextLabel="GRK-nV-9x8" style="IBUITableViewCellStyleSubtitle" id="QuD-Tn-H5U">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QuD-Tn-H5U" id="evv-rk-PVx">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Twv-8D-INw">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GRK-nV-9x8">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -49,6 +65,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="TodoBox" id="xd3-4G-eOm">
+                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="aiM-Mq-WPN">
+                            <connections>
+                                <action selector="editButtonDidSelect:" destination="BYZ-38-t0r" id="PLz-Ba-xXd"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="RD5-iC-FMz">
                             <connections>
                                 <segue destination="WIz-ur-fAJ" kind="presentation" identifier="TaskEditSegue" id="jyv-tI-jpD"/>
@@ -56,10 +77,17 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="doneButton" destination="3hg-Xz-0v0" id="cSH-1w-5uu"/>
+                        <outlet property="editButton" destination="aiM-Mq-WPN" id="Bt7-2K-Wew"/>
                         <outlet property="tableView" destination="gPz-9w-SdL" id="CfZ-Dh-U1Y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <barButtonItem systemItem="done" id="3hg-Xz-0v0">
+                    <connections>
+                        <action selector="doneButtonDidSelect:" destination="BYZ-38-t0r" id="Ea4-JE-QlR"/>
+                    </connections>
+                </barButtonItem>
             </objects>
             <point key="canvasLocation" x="972" y="38.23088455772114"/>
         </scene>
@@ -76,13 +104,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eXA-tq-yvZ">
-                                <rect key="frame" x="10" y="134" width="355" height="523"/>
+                                <rect key="frame" x="10" y="134" width="355" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="I7o-yO-cgQ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pye-Nz-4LI">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="여기에 제목을 입력하세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pye-Nz-4LI">
                                 <rect key="frame" x="10" y="84" width="355" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -93,7 +123,6 @@
                         <constraints>
                             <constraint firstItem="eXA-tq-yvZ" firstAttribute="top" secondItem="pye-Nz-4LI" secondAttribute="bottom" constant="20" id="3Pq-ap-6Uh"/>
                             <constraint firstItem="pye-Nz-4LI" firstAttribute="leading" secondItem="w5r-PJ-CW2" secondAttribute="leading" constant="10" id="5Ia-bJ-9f9"/>
-                            <constraint firstItem="4wA-C3-e0a" firstAttribute="top" secondItem="eXA-tq-yvZ" secondAttribute="bottom" constant="10" id="XEv-uG-Nds"/>
                             <constraint firstItem="pye-Nz-4LI" firstAttribute="top" secondItem="Wg3-Vq-7mr" secondAttribute="bottom" constant="20" id="elt-gY-5c2"/>
                             <constraint firstAttribute="trailing" secondItem="pye-Nz-4LI" secondAttribute="trailing" constant="10" id="p7W-jF-SyX"/>
                             <constraint firstItem="eXA-tq-yvZ" firstAttribute="leading" secondItem="w5r-PJ-CW2" secondAttribute="leading" constant="10" id="ptW-Ns-p47"/>
